completes splash frame placeholder and ensures all list elements are visible

--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -15,6 +15,7 @@
   width:100px;
   bottom: 0;
   background-color: blue;
+  z-index: 10;
 }
 
 #right-panel {
@@ -24,6 +25,27 @@
   width:100px;
   bottom: 0;
   background-color: blue;
+  z-index: 10;
+}
+
+#top-panel {
+  position: fixed;
+  top: 0;
+  height: 100px;
+  right: 0;
+  left: 0;
+  background-color: blue;
+  z-index: 10;
+}
+
+#bottom-panel {
+  position: fixed;
+  bottom: 0;
+  height: 100px;
+  right: 0;
+  left: 0;
+  background-color: blue;
+  z-index: 10;
 }
 
 .starship-list-item {
@@ -46,4 +68,8 @@
 
 .starship-list-item:hover {
   border: 1px solid blue;
+}
+
+.starship-list-item:last-of-type {
+  margin-bottom: 120px;
 }
